# rival

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.c  config.h  gui.c  gui.h  main.c  rival.c  rival.h  util.h
